[package]
name = "eternals_password_generator"
version = "0.1.1"
edition = "2021"
description = "Simple Password Generator" # Description of your package
license = "MIT" # License for your project

# Repository link is optional but good for providing the source code location
repository = "https://github.com/thatmarcboi/pswd_gen"

[dependencies]
rand = "0.8"

[lib]
name = "eternals_password_generator"
path = "src/lib.rs"

[dev-dependencies]
